--------------------
v0.2.6  2018-11-22
--------------------
Bug fixes:
* Fix db username issue in install.rb (bug #19)

--------------------
v0.2.4  2018-07-21
--------------------
Bug fixes:
* Fix bug preventing itmsworker.bat from functioning

Enhancements:
* Don't prompt for hostname, user/pass when using SQLite

--------------------
v0.2.3  2018-04-15
--------------------
Bug fixes:
* Use longtext on MySQL for transporter_jobs.result column (bug #9)

Enhancements:
* Support for iTMSTransporter's itc_provider option

--------------------
v0.2.2   2018-01-06
--------------------
Bug fixes:
* Fix path to SQLite DB file
* Fix task namespace in itmsworker.bat

Enhancements:
* Support for environment variable configuration
* Add --no-config option to install.rb

--------------------
v0.2.1   2017-12-01
--------------------
Changes:
* Upgrade to ActiveRecord 4.2.10
* Lock HAML dependency to 4.X

Enhancements:
* Add command line arguments to install.rb
* Ruby 2.4 support

--------------------
v0.2.0   2017-03-18
--------------------
Changes:
* Better formatting for status job results
* Display times using the local timezone
* Add .log extention to downloaded logs
* Upgrade to Padrino 0.12.6
* Drop support for Ruby 1.8.7

Enhancements:
* Add an API
* Add upload job hooks
* Add upload email notification templates
* Increase display width

Bug fixes:
* Fix missing images on search date calendar
* Fix issues with mysql2 gem version
* Fix searching by single date (bug #5)
* Fix status results returning a single component status

--------------------
v0.1.0   2015-05-14
--------------------
Bug fixes:
* Fix serialize bug when attempting to save a DelayedJob timeout error

Changes:
* Added support for multiple accounts (Thanks to press9 media solutions berlin - press9.de)
* Added support for batch upload and verifications (Thanks to press9 media solutions berlin - press9.de)
* Default DelayedJob timeout to 48 hours