@@ -3,6 +3,7 @@ v0.2.6  2018-11-22
 --------------------
 Bug fixes:
 * Fix db username issue in install.rb (bug #19)
+* Fix should-matchers dependency version issue under 1.9.3
 
 --------------------
 v0.2.4  2018-07-21
